manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-static-pv-demo-app2
  labels:
    app.kubernetes.io/name: nfs-pv-writer-app2
    app.kubernetes.io/part-of: nfs-pv-migration-demo
