manifests/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-pv-writer-app2
  namespace: nfs-static-pv-demo-app2
  labels:
    app.kubernetes.io/name: nfs-pv-writer-app2
spec:
  selector:
    app.kubernetes.io/name: nfs-pv-writer-app2
  ports:
    - name: http
      port: 8080
      targetPort: http
