manifests/06-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nfs-pv-writer-app2
  namespace: nfs-static-pv-demo-app2
  labels:
    app.kubernetes.io/name: nfs-pv-writer-app2
spec:
  to:
    kind: Service
    name: nfs-pv-writer-app2
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
